--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,376 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #cacad4;
+}
+
+.container {
+  max-width: 500px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 300px;
+
+  padding: 30px;
+  border-radius: 5px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+h1 {
+  display: block;
+  color: black;
+  border: solid 3px dodgerblue;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+
+  text-decoration: none;
+  font-size: 25px;
+  font-family: inherit;
+  text-align: center;
+}
+
+h3 {
+  margin-bottom: 7%;
+}
+
+h4 {
+  color: rgb(0, 0, 0);
+  font-family: inherit;
+}
+
+.person-modify {
+  margin: 10% auto;
+
+  display: flex;
+
+  width: 33%;
+}
+
+.person-modify input {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  padding: 10px;
+  font-size: 22px;
+}
+
+.btn-person {
+  display: inline-block;
+  background: dodgerblue;
+  color: #fff;
+  border: none;
+  padding: 16px;
+  margin: 2px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: large;
+  font-family: inherit;
+}
+
+.btn {
+  display: inline-block;
+  background: #333399;
+  color: #fff;
+  border: none;
+  padding: 20px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn:hover {
+  filter: brightness(1.12);
+  transform: scale(1.01);
+}
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.btn.choice {
+  background: dodgerblue;
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+}
+
+#calculate {
+  background: dodgerblue;
+  /* background: #2332c0; */
+  display: block;
+  width: 100%;
+}
+
+.task {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.task.reminder {
+  border-left: 5px solid green;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control > .fetched input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+  background-color: #494d6d;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.ul-offer {
+  padding-top: 1%;
+  padding-bottom: 3%;
+  margin-left: 10%;
+  font-size: small;
+}
+
+.fetched ul > input {
+  margin-top: -62%;
+  margin-left: 10%;
+  padding: -20%;
+
+  width: 90%;
+  border: solid 1px;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  max-width: 600px;
+  margin: 30px auto;
+  overflow: auto;
+  min-height: 300px;
+  border: 2px solid rgb(114, 148, 177);
+  padding: 30px;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.btn {
+  display: inline-block;
+  background: #000036;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  transform: scale(0.98);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.task {
+  background: #f7f5f5;
+  margin: 5px;
+  margin-bottom: 20px;
+  padding: 10px 20px;
+
+  border-left: 4px solid #1e90ff;
+}
+
+.task:hover {
+  background: rgb(226, 226, 231);
+}
+
+.task.reminder {
+  border-left: 5px solid green;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.form-control-radio {
+  display: flex;
+}
+
+.form-control-radio label {
+  margin-right: 30%;
+  position: relative;
+  font-size: large;
+  margin-bottom: 2%;
+}
+
+.form-control-radio input {
+  width: 10%;
+  height: 24px;
+}
+
+.form-control-check {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-control-check label {
+  flex: 1;
+}
+
+.form-control-check input {
+  flex: 2;
+  height: 20px;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
+}
+
+/* The container must be positioned relative: */
+.custom-select {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+.custom-textarea {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
